Rework multidisk loctor, refs #1992

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1472,6 +1472,8 @@ wizard.choose_disk_location.target_dir=Target directory
 wizard.choose_disk_location.title=Select Directory
 wizard.choose_disk_location.local_base.title=Base directory
 wizard.choose_disk_location.local_base.text=It is not possible to move a folder to the base directory.
+wizard.choose_disk_location.already_synchronized=This directory is already synchronized
+wizard.choose_disk_location.already_online=A folder with this name exists online
 wizard.choose_multi_disk_location.select_additional=Additional directories
 wizard.choose_multi_disk_location.title=Select Directories
 wizard.control.back.description=Go to previous wizard step
@@ -1584,8 +1586,6 @@ wizard.what_to_do.host_work=Send/Share files
 wizard.what_to_do.invite.select_local=Please select local target directory for the files
 wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an invitation
 wizard.what_to_do.load_invite=Open invitation file
-wizard.what_to_do.join_online.tip=Sync files from previously setup computers with this computer
-wizard.what_to_do.join_online=Sync previously setup folders
 wizard.error_title=Wizard error
 wizard.what_to_do.no_login=Not logged in. Please login first or wait to get connected.
 wizard.what_to_do.no_os_text=There are no online folders available\nfor sync with this computer.
