Add link button, refs #1992

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -135,6 +135,10 @@ action_invite_friend.description=Invite someone to join this folder
 action_invite_friend.key=I
 action_invite_friend.name=Invite
 
+action_link_directory.description=Link directory to an existing online folder
+action_link_directory.key=L
+action_link_directory.name=Link
+
 action_new_folder.description=Create a new folder
 action_new_folder.key=N
 action_new_folder.name=New Folder
