Beginning of link dialog, refs #1992

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -588,6 +588,7 @@ dialog.create_edit_profile.sync_deletion=Sync deleted files
 dialog.create_edit_profile.time_between_scans=Scan for changes every
 dialog.create_edit_profile.title_create=Create custom transfer mode
 dialog.directory-chooser.title=Choose directory
+dialog.link_folder_online.select_text=Select online folder
 dialog.new-directory-creator.text=New directory
 dialog.new-directory-creator.title=New directory
 dialog.single_file_accept.title=Single file accept
@@ -1022,6 +1023,8 @@ line_speed.lan100=LAN 100mbit/s
 line_speed.lan10=LAN 10mbit/s
 line_speed.unlimited=Unlimited
 line_speed.upload_speed=Upload
+
+link_folder.dialog.title=Link to online folder
 
 low_memory.configure_failure={APPNAME} was unable to configure additional memory.
 low_memory.configure_success=Additional memory has been configured.\n{APPNAME} must be restarted manually for this to take effect.
