--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -59,6 +59,10 @@ action_clear_completed_uploads.description=Clear the list of the recently comple
 action_clear_completed_uploads.key=C
 action_clear_completed_uploads.name=Cleanup
 
+action_clear_link_directory.description=Clears the existing directory link
+action_clear_link_directory.key=C
+action_clear_link_directory.name=Clear
+
 action_connect.description=Manually connect to a computer
 action_connect.key=C
 action_connect.name=Connect
