--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1486,6 +1486,8 @@ wizard.choose_disk_location.local_base.text=It is not possible to move a folder 
 wizard.choose_disk_location.already_synchronized=This directory is already synchronized
 wizard.choose_disk_location.already_online=A folder with this name exists online
 wizard.choose_multi_disk_location.select_additional=Additional directories
+wizard.choose_multi_disk_location.backup_link_error_title=Invalid selection.
+wizard.choose_multi_disk_location.backup_link_error_text={0} checkbox cannot be selected with folder links.
 wizard.choose_multi_disk_location.title=Select Directories
 wizard.control.back.description=Go to previous wizard step
 wizard.control.back=Back
