Pass lionk info in FolderCreateItem, refs #1992

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1029,6 +1029,8 @@ line_speed.unlimited=Unlimited
 line_speed.upload_speed=Upload
 
 link_folder.dialog.title=Link to online folder
+link_folder.dialog.link_text=Link
+link_folder.dialog.description=Select an online folder to join locally
 
 low_memory.configure_failure={APPNAME} was unable to configure additional memory.
 low_memory.configure_success=Additional memory has been configured.\n{APPNAME} must be restarted manually for this to take effect.
@@ -1486,8 +1488,6 @@ wizard.choose_disk_location.local_base.text=It is not possible to move a folder 
 wizard.choose_disk_location.already_synchronized=This directory is already synchronized
 wizard.choose_disk_location.already_online=A folder with this name exists online
 wizard.choose_multi_disk_location.select_additional=Additional directories
-wizard.choose_multi_disk_location.backup_link_error_title=Invalid selection.
-wizard.choose_multi_disk_location.backup_link_error_text={0} checkbox cannot be selected with folder links.
 wizard.choose_multi_disk_location.title=Select Directories
 wizard.control.back.description=Go to previous wizard step
 wizard.control.back=Back
