--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -471,6 +471,7 @@ about_dialog.power_folder.license=License\:\n{0}
 about_dialog.power_folder.max=Max memory\: {0}MB
 about_dialog.power_folder.text=Version\: {0}
 about_dialog.power_folder.used=Used memory\: {0}MB
+about_dialog.power_folder.datasize=Data: {0}
 about_dialog.power_folder.distribution={0}
 about_dialog.send_bug_report.key=R
 about_dialog.send_bug_report.text=Report
