Removed useless information

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1615,7 +1615,7 @@ wizard.what_to_do.title=What do you want to do?
 
 wizard.tell_friend.title=Tell someone about {APPNAME}
 wizard.tell_friend.information1=Send emails inviting people to use {APPNAME}.
-wizard.tell_friend.information2=Emails will be sent online.
+wizard.tell_friend.information2=
 wizard.tell_friend.add_email_address=Please enter the email addresses (one per line)
 wizard.tell_friend.personal_message=Please enter a message for the receiver(s) (optional)
 wizard.tell_friend.title.warning_title=Invalid email address
