--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1588,8 +1588,9 @@ wizard.what_to_do.backup_folder=Backup files
 wizard.what_to_do.custom_sync.tip=Choose this option to configure custom file transfer modes
 wizard.what_to_do.custom_sync=Advanced setup
 wizard.what_to_do.folder_backup_success=You successfully set up a folder backup\n
-wizard.what_to_do.folder_host_success=You successfully set up a host folder\n
+wizard.what_to_do.folder_host_success=You successfully setup the sending of files\n
 wizard.what_to_do.host_pcs.select=Please select the files to send/shared
+wizard.what_to_do.download.select=Please select the files to download
 wizard.what_to_do.host_pcs_join=Other computers can join this folder now
 wizard.what_to_do.host_work.tip=Choose this option to host files or share them with other computers
 wizard.what_to_do.host_work=Send/Share files
@@ -1602,9 +1603,14 @@ wizard.what_to_do.no_os_text=There are no online folders available\nfor sync wit
 wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up {APPNAME}
 wizard.what_to_do.open_online_documentation=Open documentation
 wizard.what_to_do.pcs_join=Other computers can join this folder now
+wizard.what_to_do.more=Show more options
+wizard.what_to_do.more.tip=Shows advance options
 wizard.what_to_do.sync_pcs.pcs_join=Other computers can join this folder now
 wizard.what_to_do.sync_pcs.select=Please select the files to sync
-wizard.what_to_do.sync_pcs.success=You successfully set up a folder mirror\n
+wizard.what_to_do.sync_pcs.success=You successfully set up this folder to sync\n
+wizard.what_to_do.folder_download_sucess=You successfully set up to download the files.
+wizard.what_to_do.download=Download files
+wizard.what_to_do.download.tip=Automatically downloads or restores files
 wizard.what_to_do.synchronized_folder.tip=Choose this option to synchronize files with other computers
 wizard.what_to_do.synchronized_folder=Sync files
 wizard.what_to_do.title=What do you want to do?
