--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -972,6 +972,8 @@ status_tab.online_storage.account_disabled_expiration={0} expired on {1}
 status_tab.online_storage.account_disabled_usage={0} disabled (overused)
 status_tab.online_storage.account_not_logged_in.tips={APPNAME} is logging in to this account
 status_tab.online_storage.account_not_logged_in={0} logging in...
+status_tab.online_storage.account_login_failed.tips={APPNAME} is unable to automatically login. Click to manually login.
+status_tab.online_storage.account_login_failed={0} failed to login!
 status_tab.online_storage.no_password.tips=Click here to enter account password
 status_tab.online_storage.no_password=Log in to Online Storage
 status_tab.online_storage.not_setup.tips=Click here to configure account details
