--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -47,9 +47,13 @@ action_add_invitee.description=Add invitee
 action_add_invitee.key=A
 action_add_invitee.name=Add
 
-action_ask_for_friendship.description=Request connection
-action_ask_for_friendship.key=A
-action_ask_for_friendship.name=Ask
+action_activate_notice.description=Activate the selected notice
+action_activate_notice.key=A
+action_activate_notice.name=Activate
+
+action_cleanup_notices.description=Clear the list of notices
+action_cleanup_notices.key=C
+action_cleanup_notices.name=Cleanup
 
 action_clear_completed_downloads.description=Clear the list of the recently completed downloads
 action_clear_completed_downloads.key=C
@@ -59,7 +63,7 @@ action_clear_completed_uploads.description=Clear the list of the recently comple
 action_clear_completed_uploads.key=C
 action_clear_completed_uploads.name=Cleanup
 
-action_clear_link_directory.description=Clears the existing directory link
+action_clear_link_directory.description=Clear the existing directory link
 action_clear_link_directory.key=C
 action_clear_link_directory.name=Clear
 
@@ -191,10 +195,6 @@ action_open_files_information.description=Open file information for this folder
 action_open_files_information.key=F
 action_open_files_information.name=Browse files
 
-action_open_invitation_received_wizard.description=Open the invitation received wizard
-action_open_invitation_received_wizard.key=I
-action_open_invitation_received_wizard.name=Invitation
-
 action_open_members_information.description=Open information on members for this folder
 action_open_members_information.key=M
 action_open_members_information.name=Members
@@ -215,7 +215,7 @@ action_reconnect.description=Reconnect to this computer now
 action_reconnect.key=C
 action_reconnect.name=Reconnect
 
-action_members_refresh.description=Refreshes member list and permissions
+action_members_refresh.description=Refresh member list and permissions
 action_members_refresh.key=R
 action_members_refresh.name=Refresh
 
@@ -295,9 +295,9 @@ action_pause_sync.description=Pause all sync tasks
 action_pause_sync.key=P
 action_pause_sync.name=Pause
 
-action_activate_warning.description=Display any warnings
-action_activate_warning.key=W
-action_activate_warning.name=Warning
+action_view_notices.description=View any notices
+action_view_notices.key=N
+action_view_notices.name=Notices
 
 pro.action_open_license_file.description=Opens a license key file from disk
 pro.action_open_license_file.key=O
@@ -609,6 +609,7 @@ dialog.node_select.multi_computers=Multiple computers selected
 dialog.node_select.no_computers=No computers selected
 dialog.node_select.text=Select computers to invite. Hold down Ctrl key to select multiple computers.
 dialog.node_select.title=Select computers
+dialog.notices.title=Notices
 dialog.personalized_message.hint=Add a message for the recipient
 dialog.restore_archive.title=Restore archived file
 dialog.restore_archive.save_error=There was a problem saving the file to disk: {0}
@@ -955,10 +956,9 @@ status_tab.in_sync=All folders are in sync
 status_tab.last_synced=Last sync {0}
 status_tab.local=Local
 status_tab.never_synced=Folders never in sync
-status_tab.new_friend_requests=New connection request(s)
 status_tab.new_invitations=New invitation(s)
 status_tab.new_single_file_offers=New single file offer(s)
-status_tab.new_warnings=Warning(s)
+status_tab.new_notices=Notice(s)
 status_tab.no_computers=No other computers known
 status_tab.no_folders=No folders configured. Press "New Folder" to start.
 status_tab.not_running=Not running
@@ -1085,6 +1085,20 @@ network.statistics.title=Network Statistics
 notification_form.title=<html><b>{APPNAME}</b><br>{0}</html>
 notification_handler.display.text=Display
 notification_handler.ignore.text=Ignore
+
+notices_table.date=Date
+notices_table.severity=Severity
+notices_table.title=Title
+notices_table.summary=Summary
+
+notice_severity.information=Information
+notice_severity.warning=Warning
+
+notice.invitation.title=Folder Invitation
+notice.invitation.summary=You have received an invitation from {0} to join a folder.
+
+notice.ask_for_friendship.title=Reqest for Friendship
+notice.ask_for_friendship.summary=You have received a freindship request from {0}.
 
 online_label.connecting=Connecting
 online_label.disabled=Disabled
@@ -1420,7 +1434,6 @@ uicontroller.local_mass_delete.title=All files deleted
 uicontroller.local_mass_delete.message=All files in folder {0} have been deleted.\n\nDeletions have not been distributed to other members.
 uicontroller.local_mass_delete.broadcast_deletions=Broadcast deletions
 uicontroller.local_mass_delete.remove_folder_locally=Remove folder locally
-uicontroller.remote_mass_delete.warning_title=Mass deletion detected
 uicontroller.remote_mass_delete.warning_message=Member {0} deleted {1}% of files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 uicontroller.remote_mass_delete.warning_absolute_message=Member {0} deleted {1} or more files from folder {2}.\n\nTo protect local files, this folder's transfer mode has been changed\nfrom {3} to {4}.
 
@@ -1458,6 +1471,12 @@ uilock.dialog.password=Password:
 uilock.dialog.help=Help
 uilock.dialog.exit=Exit
 uilock.dialog.error.wronglogin=Invalid username or password.
+
+warning_notice.title=System warning
+warning_notice.limited_connectivity=Limited connectivity detected
+warning_notice.poor_quality=Poor connection quality detected
+warning_notice.low_memory=Low memory detected
+warning_notice.mass_deletion=Mass deletion detected
 
 winutils.shortcut.description=This shortcut was placed here by {APPNAME}
 
