--- a/src/skins/de/dal33t/powerfolder/skin/greendream/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/greendream/icons.properties
@@ -5,6 +5,8 @@ action_add_friend.icon=de/dal33t/powerfolder/skin/greendream/icons/AddFriend.png
 action_add_invitee.icon=de/dal33t/powerfolder/skin/greendream/icons/Invite.png
 action_add_ignore.icon=de/dal33t/powerfolder/skin/greendream/icons/Delete.png
 action_add_directory.icon=de/dal33t/powerfolder/skin/greendream/icons/Add.png
+action_activate_notice.icon=de/dal33t/powerfolder/skin/greendream/icons/Open.png
+action_cleanup_notices.icon=de/dal33t/powerfolder/skin/greendream/icons/Clear.png
 action_clear_completed_downloads.icon=de/dal33t/powerfolder/skin/greendream/icons/Clear.png
 action_clear_completed_uploads.icon=de/dal33t/powerfolder/skin/greendream/icons/Clear.png
 action_clear_problem.icon=de/dal33t/powerfolder/skin/greendream/icons/Clear.png
