Unsync file filter selection, fixes #2000

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -751,6 +751,7 @@ files_stats_panel.local_label=Local: {0}
 files_stats_panel.incoming_label=Incoming: {0}
 files_stats_panel.deleted_label=Deleted: {0}
 
+files_tab.combo.unsynchronized_files=Unsynchronized files
 files_tab.combo.deleted_and_previous_files=Deleted and recycled files
 files_tab.combo.incoming_files_only=Incoming files only
 files_tab.combo.local_and_incoming=Local and incoming files
