--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -772,6 +772,7 @@ filter_text_field.glass.hint=Select filter mode
 filter_text_field.menu.file_name_only.text=Filter by file name
 filter_text_field.menu.file_name_directory_name.text=Filter by file or directory
 filter_text_field.menu.modifier.text=Filter by modifier
+filter_text_field.menu.computer.text=Filter for {0}
 filter_text_field.tip=Filter results
 files_table_panel.no_files_available=No files available
 
