Instant sync UI changes

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -579,6 +579,7 @@ dialog.create_edit_profile.configure_from=Copy from existing
 dialog.create_edit_profile.synchronization=Remote change detection
 dialog.create_edit_profile.change_detection=Local change detection
 dialog.create_edit_profile.daily_sync=Daily sync
+dialog.create_edit_profile.instant_sync=Instant sync
 dialog.create_edit_profile.duplicate_profile_title=Duplicate transfer mode
 dialog.create_edit_profile.every_day=Every day
 dialog.create_edit_profile.hour_day_sync=Hour / day of sync
