refs #1976 Memory leak instances

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -472,6 +472,7 @@ about_dialog.power_folder.max=Max memory\: {0}MB
 about_dialog.power_folder.text=Version\: {0}
 about_dialog.power_folder.used=Used memory\: {0}MB
 about_dialog.power_folder.datasize=Data: {0}
+about_dialog.power_folder.dbsize=Items: {0}
 about_dialog.power_folder.distribution={0}
 about_dialog.support=Support
 about_dialog.app_description={APPDESCRIPTION}
