--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -308,6 +308,7 @@ pro.action_open_license_file.name=Open license file
 ##################
 
 transfer_mode.automatic_download.name=Automatic download
+transfer_mode.auto_sync.name=Auto sync
 transfer_mode.automatic_synchronization.name=Auto sync (1 minute)
 transfer_mode.automatic_synchronization_10min.name=Auto sync (10 minutes)
 transfer_mode.backup_source.name=Backup source (5 minutes)
