--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -794,6 +794,7 @@ folder_create.os_error.text=Unable to setup the Online Storage to backup folder 
 folder_create.dialog.select_directory.text=Select directory
 
 folder_problem.unsynchronized=Folder {0} has not been in sync for {1} day(s).
+folder_problem.device_disconnected=Unable to access device. Currently not available.
 folder_problem.table_model.date=Date
 folder_problem.table_model.description=Description
 folder_problem.table_model.solution=Solution
@@ -1468,6 +1469,7 @@ user.dir.videos=Videos
 user.dir.downloads=Downloads
 user.dir.public=Public
 user.dir.sites=Sites
+user.dir.dropbox=My Dropbox
 
 uilock.dialog.title=User interface locked
 uilock.dialog.info=Enter username/email and password to unlock.
