--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1103,8 +1103,8 @@ notice_severity.warning=Warning
 notice.invitation.title=Folder Invitation
 notice.invitation.summary=You have received an invitation from {0} to join a folder.
 
-notice.ask_for_friendship.title=Reqest for Friendship
-notice.ask_for_friendship.summary=You have received a freindship request from {0}.
+notice.ask_for_friendship.title=Request for Friendship
+notice.ask_for_friendship.summary=You have received a friendship request from {0}.
 
 online_label.connecting=Connecting
 online_label.disabled=Disabled
