Smart text, fixes #1993

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -965,6 +965,9 @@ status_tab.never_synced=Folders never in sync
 status_tab.new_invitations=New invitation(s)
 status_tab.new_single_file_offers=New single file offer(s)
 status_tab.new_notices=Notice(s)
+status_tab.new_friendship_notices=Friendship notice(s)
+status_tab.new_warning_notices=Warning(s)
+status_tab.new_invitation_notices=Invitations(s)
 status_tab.no_computers=No other computers known
 status_tab.no_folders=No folders configured. Press "New Folder" to start.
 status_tab.not_running=Not running
