--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -143,7 +143,7 @@ action_invite_friend.description=Invite someone to join this folder
 action_invite_friend.key=I
 action_invite_friend.name=Invite
 
-action_link_directory.description=Link directory to an existing online folder
+action_link_directory.description=Link directory to an existing folder
 action_link_directory.key=L
 action_link_directory.name=Link
 
@@ -593,7 +593,7 @@ dialog.create_edit_profile.sync_deletion=Sync deleted files
 dialog.create_edit_profile.time_between_scans=Scan for changes every
 dialog.create_edit_profile.title_create=Create custom transfer mode
 dialog.directory-chooser.title=Choose directory
-dialog.link_folder_online.select_text=Select online folder
+dialog.link_folder_online.select_text=Select non-local folder
 dialog.new-directory-creator.text=New directory
 dialog.new-directory-creator.title=New directory
 dialog.single_file_accept.title=Single file accept
@@ -684,7 +684,7 @@ exp_folder_view.expand=Expand folder details
 exp_folder_view.files=Files: {0}
 exp_folder_view.files_available={0} available
 exp_folder_view.folder_local_text=Local folder
-exp_folder_view.folder_online_text=Online folder
+exp_folder_view.folder_online_text=Non-local folder
 exp_folder_view.folder_local_online_text=Local folder, backed up online
 exp_folder_view.folder_preview_text=Preview folder
 exp_folder_view.members=Members: {0} ({1} connected)
@@ -785,8 +785,8 @@ find_computers_panel.search_for_computer.tooltip=Enter three or more characters 
 
 folder.info_tip=Contains files and folders managed by {APPNAME}
 
-folders_list.local_folders=Local Folders
-folders_list.online_folders=Online Folders
+folders_list.local_folders=Local folders
+folders_list.online_folders=Non-local folders
 folders_list.collapse_hint=Collapse group
 folders_list.expand_hint=Expand group
 
@@ -847,7 +847,7 @@ folder_remove.dialog.button.key=R
 folder_remove.dialog.button.name=Remove
 folder_remove.dialog.delete=Delete meta-data
 folder_remove.dialog.remove_from_local=Stop sync locally
-folder_remove.dialog.remove_from_os=Remove from online folders
+folder_remove.dialog.remove_from_os=Remove from folders
 folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 folder_remove.dialog.text=Remove Folder {0}?
 folder_remove.dialog.title=Remove Folder {0}?
@@ -1037,9 +1037,9 @@ line_speed.lan10=LAN 10mbit/s
 line_speed.unlimited=Unlimited
 line_speed.upload_speed=Upload
 
-link_folder.dialog.title=Link to online folder
+link_folder.dialog.title=Link to an existing folder
 link_folder.dialog.link_text=Link
-link_folder.dialog.description=Select an online folder to join locally
+link_folder.dialog.description=Select an folder to sync local.
 
 low_memory.configure_failure={APPNAME} was unable to configure additional memory.
 low_memory.configure_success=Additional memory has been configured.\n{APPNAME} must be restarted manually for this to take effect.
@@ -1322,7 +1322,7 @@ settings_tab.edit_a_pattern.title=Edit a pattern
 settings_tab.folder_not_empty.title=Folder not empty
 settings_tab.folder_not_empty=Folder {0} is not empty.
 settings_tab.ignore_patterns=Ignore patterns
-settings_tab.local_folder_location=Local folder location
+settings_tab.local_folder_location=Local directory
 settings_tab.move_content.dont=Do Not Move Contents
 settings_tab.move_content.move=Move Contents
 settings_tab.move_content.title=Move folder contents
@@ -1577,7 +1577,7 @@ wizard.multi_file_restoring_panel.fail_text=No files have been restored. Problem
 wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.no_name.title=No name
 wizard.multi_folder_setup.no_name.text=No name has been entered for {0}
-wizard.multi_online_storage_setup.title=Configure Online Folders
+wizard.multi_online_storage_setup.title=Configure folder(s)
 wizard.pfwizard.folder_title=Folder Wizard
 pro.wizard.pfwizard.activation_title=Activation Wizard
 wizard.pfwizard.invitation_title=Invitation Wizard
@@ -1586,8 +1586,8 @@ wizard.pfwizard.login_title=Login Wizard
 wizard.pfwizard.tell_friend_title=Tell a Friend Wizard
 wizard.pfwizard.restore_title=Restore Wizard
 wizard.project_name.folder_project_success=You successfully set up a project folder\!\n
-wizard.select_online_storage.title=Select Online Folders
-wizard.select_online_storage.info=Please select online folders to join locally
+wizard.select_online_storage.title=Select Folders
+wizard.select_online_storage.info=Please select folders to sync to this computer.
 wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
 wizard.send_invitations.invitation_hint1=Enter a email or computer name to invite.
 wizard.send_invitations.information=What is an invitation?
@@ -1629,7 +1629,7 @@ wizard.what_to_do.load_invite.tip=Choose this option to setup a folder from an i
 wizard.what_to_do.load_invite=Open invitation file
 wizard.error_title=Wizard error
 wizard.what_to_do.no_login=Not logged in. Please login first or wait to get connected.
-wizard.what_to_do.no_os_text=There are no online folders available\nfor sync with this computer.
+wizard.what_to_do.no_os_text=There are no folders available\nfor syncing with this computer.
 wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up {APPNAME}
 wizard.what_to_do.open_online_documentation=Open documentation
 wizard.what_to_do.pcs_join=Other computers can join this folder now
@@ -1654,5 +1654,5 @@ wizard.tell_friend.title.warning_title=Invalid email address
 wizard.tell_friend.title.warning_bad_email='{0}' is not a valid email address
 wizard.tell_friend.success=Emails have been sent to the recipients.
 
-wizard.multi_online_storage_setup.local_folder_location=Local folder location
+wizard.multi_online_storage_setup.local_folder_location=Local directory
 wizard.multi_online_storage_setup.select_directory=Select directory
