--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -593,7 +593,7 @@ dialog.create_edit_profile.sync_deletion=Sync deleted files
 dialog.create_edit_profile.time_between_scans=Scan for changes every
 dialog.create_edit_profile.title_create=Create custom transfer mode
 dialog.directory-chooser.title=Choose directory
-dialog.link_folder_online.select_text=Select non-local folder
+dialog.link_folder_online.select_text=Select folder
 dialog.new-directory-creator.text=New directory
 dialog.new-directory-creator.title=New directory
 dialog.single_file_accept.title=Single file accept
@@ -846,8 +846,8 @@ folder_problem.noconflictdetection=File {0} from {1} might have a version confli
 folder_remove.dialog.button.key=R
 folder_remove.dialog.button.name=Remove
 folder_remove.dialog.delete=Delete meta-data
-folder_remove.dialog.remove_from_local=Stop sync locally
-folder_remove.dialog.remove_from_os=Remove from folders
+folder_remove.dialog.remove_from_local=Stop to sync local
+folder_remove.dialog.remove_from_os=Remove online
 folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 folder_remove.dialog.text=Remove Folder {0}?
 folder_remove.dialog.title=Remove Folder {0}?
@@ -1039,7 +1039,7 @@ line_speed.upload_speed=Upload
 
 link_folder.dialog.title=Link to an existing folder
 link_folder.dialog.link_text=Link
-link_folder.dialog.description=Select an folder to sync local.
+link_folder.dialog.description=Which folder should be synced to this directory?
 
 low_memory.configure_failure={APPNAME} was unable to configure additional memory.
 low_memory.configure_success=Additional memory has been configured.\n{APPNAME} must be restarted manually for this to take effect.
