fixes #1928 - Adding DAOs for Account, ServerInfo, MemberInfo, FolderInfo, Notification, FolderSecuritySettings - Adding Hibernate and H2 as default DB - Adding migration of db4o to SQL DB - Adding tests and test data

--- a/.classpath
+++ b/.classpath
@@ -39,5 +39,8 @@
 	<classpathentry exported="true" kind="lib" path="lib/synthetica/syntheticaSilverMoon.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/synthetica/syntheticaSkyMetallic.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/synthetica/syntheticaWhiteVision.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate-annotations.jar"/>
+	<classpathentry kind="lib" path="lib/ejb3-persistence.jar"/>
+	<classpathentry kind="lib" path="lib/hibernate3-strip.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
