Scarp read - use normal autocleanup, fixes #1993

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1103,9 +1103,7 @@ notices_table.summary=Summary
 notice_severity.information=Information
 notice_severity.warning=Warning
 
-notices_information_card.view.all=Show all
-notices_information_card.view.unread=Show unread
-notices_information_card.view.auto=Auto cleanup
+notices_information_card.view.auto=Auto-cleanup
 
 notice.invitation.title=Folder Invitation
 notice.invitation.summary=You have received an invitation from {0} to join a folder.
