--- a/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
@@ -6,7 +6,7 @@ action_add_invitee.icon=de/dal33t/powerfolder/skin/lightsky/icons/Invite.png
 action_add_ignore.icon=de/dal33t/powerfolder/skin/lightsky/icons/Delete.png
 action_add_directory.icon=de/dal33t/powerfolder/skin/lightsky/icons/Add.png
 action_activate_notice.icon=de/dal33t/powerfolder/skin/lightsky/icons/Open.png
-action_cleanup_notices.icon.icon=de/dal33t/powerfolder/skin/lightsky/icons/Clear.png
+action_cleanup_notices.icon=de/dal33t/powerfolder/skin/lightsky/icons/Clear.png
 action_clear_completed_downloads.icon=de/dal33t/powerfolder/skin/lightsky/icons/Clear.png
 action_clear_completed_uploads.icon=de/dal33t/powerfolder/skin/lightsky/icons/Clear.png
 action_clear_problem.icon=de/dal33t/powerfolder/skin/lightsky/icons/Clear.png
