Deleted files link, refs #2052

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -681,6 +681,7 @@ exp_computer_view.version=Client version: {0}
 
 exp_folder_view.collapse=Collapse folder details
 exp_folder_view.expand=Expand folder details
+exp_folder_view.deleted_files=Deleted files: {0}
 exp_folder_view.files=Files: {0}
 exp_folder_view.files_available={0} available
 exp_folder_view.folder_local_text=Local folder
