--- a/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
+++ b/src/skins/de/dal33t/powerfolder/skin/lightsky/icons.properties
@@ -51,6 +51,24 @@ action_single_file_transfer.icon=de/dal33t/powerfolder/skin/lightsky/icons/Arrow
 action_single_file_transfer_accept.icon=de/dal33t/powerfolder/skin/lightsky/icons/Checked.png
 action_resolve_problem.icon=de/dal33t/powerfolder/skin/lightsky/icons/Advanced.png
 action_sync_folder.icon=de/dal33t/powerfolder/skin/lightsky/icons/Sync00.png
+pac_00.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac00.png
+pac_01.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac01.png
+pac_02.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac02.png
+pac_03.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac03.png
+pac_04.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac04.png
+pac_05.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac05.png
+pac_06.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac06.png
+pac_07.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac07.png
+pac_08.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac08.png
+pac_09.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac09.png
+pac_10.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac10.png
+pac_11.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac11.png
+pac_12.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac12.png
+pac_13.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac13.png
+pac_14.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac14.png
+pac_15.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac15.png
+pac_16.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pac16.png
+pac_dot.icon=de/dal33t/powerfolder/skin/powerfolder1/icons/pac/pacDot.png
 
 # general icons
 
