--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -549,7 +549,7 @@ connection_lan.text=Connected via Local Area Network
 delete.busy.description=Moving file from your folder to recycle bin
 delete.busy.title=Deleting file
 
-dialog.ask_for_friendship.button.add=Add to connections
+dialog.ask_for_friendship.button.add=Add to computers
 dialog.ask_for_friendship.question={0} joined these folders\:\n\n{1}\nYou may wish to add him to your connections list.
 dialog.ask_for_friendship.question2={0} has added you to his connection list.\n\nYou may wish to add him to your connections list.
 dialog.ask_for_friendship.explain={APPNAME} automatically connects\nto computers on your connections list.
@@ -1157,7 +1157,7 @@ preferences.dialog.delta_sync.tooltip=Sync only the changes in files
 preferences.dialog.use_delta_on_internet=on Internet
 preferences.dialog.use_delta_on_lan=on LAN
 preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add message for connection
-preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to connections if a computer becomes a member of a folder
+preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to computers list if a computer becomes a member of a folder
 preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
 preferences.dialog.dialogs.title=Dialogs
 preferences.dialog.duplicate_localbase.title=Directory in use
