--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1107,10 +1107,10 @@ notice_severity.warning=Warning
 notices_information_card.view.auto=Auto-cleanup
 
 notice.invitation.title=Folder Invitation
-notice.invitation.summary=You have received an invitation from {0} to join a folder.
+notice.invitation.summary=Invitation from {0} to join folder {1}.
 
 notice.ask_for_friendship.title=Request for Friendship
-notice.ask_for_friendship.summary=You have received a friendship request from {0}.
+notice.ask_for_friendship.summary=Friendship request from {0}.
 
 online_label.connecting=Connecting
 online_label.disabled=Disabled
