--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -319,6 +319,7 @@ transfer_mode.disabled.name=Disabled
 transfer_mode.host_files.name=Share/Send
 transfer_mode.manual_synchronization.name=Manual sync
 transfer_mode.no_sync.name=No sync
+transfer_mode.meta_sync.name=Auto sync (meta)
 
 ####################
 # Pro Translations #
