Maintain the folder db

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -83,6 +83,10 @@ action_backup_online_storage.description=Backup this folder to Online Storage
 action_backup_online_storage.key=B
 action_backup_online_storage.name=Start online backup
 
+action_maintain_folder_db.name=Maintain database
+action_maintain_folder_db.key=M
+action_maintain_folder_db.description=Maintains the internal folder database and frees up memory.
+
 action_stop_online_storage.description=Stop backing up this folder to Online Storage
 action_stop_online_storage.key=S
 action_stop_online_storage.name=Stop online backup
@@ -1660,3 +1664,4 @@ wizard.tell_friend.success=Emails have been sent to the recipients.
 
 wizard.multi_online_storage_setup.local_folder_location=Local directory
 wizard.multi_online_storage_setup.select_directory=Select directory
+
