Renamings Online Storage -> Cloud Storage

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -79,7 +79,7 @@ action_delete_transfer_mode.description=Delete this transfer mode
 action_delete_transfer_mode.key=D
 action_delete_transfer_mode.name=Delete
 
-action_backup_online_storage.description=Backup this folder to Online Storage
+action_backup_online_storage.description=Backup this folder to cloud space
 action_backup_online_storage.key=B
 action_backup_online_storage.name=Start online backup
 
@@ -87,7 +87,7 @@ action_maintain_folder_db.name=Maintain database
 action_maintain_folder_db.key=M
 action_maintain_folder_db.description=Maintains the internal folder database and frees up memory.
 
-action_stop_online_storage.description=Stop backing up this folder to Online Storage
+action_stop_online_storage.description=Stop backing up this folder to cloud space
 action_stop_online_storage.key=S
 action_stop_online_storage.name=Stop online backup
 
@@ -155,13 +155,13 @@ action_new_folder.description=Create a new folder
 action_new_folder.key=N
 action_new_folder.name=New Folder
 
-action_join_online_storage.description=Locally join this online storage folder
+action_join_online_storage.description=Locally join this folder
 action_join_online_storage.key=J
 action_join_online_storage.name=Join
 
-action_online_storage.description=Open this online storage folder in browser
+action_online_storage.description=Open this cloud space folder in browser
 action_online_storage.key=O
-action_online_storage.name=Online Storage
+action_online_storage.name=Cloud Space
 
 action_open_explorer.description=Explore this folder
 action_open_explorer.key=O
@@ -796,7 +796,7 @@ folders_list.online_folders=Non-local folders
 folders_list.collapse_hint=Collapse group
 folders_list.expand_hint=Expand group
 
-folder_create.os_error.text=Unable to setup the Online Storage to backup folder {0}
+folder_create.os_error.text=Unable to setup the cloud to backup folder {0}
 folder_create.dialog.select_directory.text=Select directory
 
 folder_problem.unsynchronized=Folder {0} has not been in sync for {1} day(s).
@@ -990,11 +990,11 @@ status_tab.online_storage.account_not_logged_in={0} logging in...
 status_tab.online_storage.account_login_failed.tips={APPNAME} is unable to automatically login. Click to manually login.
 status_tab.online_storage.account_login_failed={0} failed to login!
 status_tab.online_storage.no_password.tips=Click here to enter account password
-status_tab.online_storage.no_password=Log in to Online Storage
+status_tab.online_storage.no_password=Log in to cloud
 status_tab.online_storage.not_setup.tips=Click here to configure account details
 status_tab.online_storage.not_setup=Not set up yet. Sign up and login here.
 
-status_tab.online_storage.usage=Online storage in use: {0} ({1}%)
+status_tab.online_storage.usage=Cloud space in use: {0} ({1}%)
 status_tab.online_storage.title=Account
 status_tab.sync_eta=Estimated sync: {0}
 status_tab.sync_unknown=Estimated sync: Unknown
@@ -1124,11 +1124,11 @@ online_label.online=Online
 online_storage.account_data=Unable to login. Please check or recover your password (back).
 online_storage.connecting=Connecting to server
 
-online_storage_component.online_storage_text=Online storage: {0}%
-online_storage_component.online_storage_tip=Open this online storage folder in browser
-online_storage_component.online_storage_unjoined_text=Online storage: 0% (start now)
-online_storage_component.online_storage_unjoined_tip=Backup this folder to online storage
-online_storage_component.online_storage_warning=Online storage quota exceeded
+online_storage_component.online_storage_text=Cloud space: {0}%
+online_storage_component.online_storage_tip=Open this cloud folder in browser
+online_storage_component.online_storage_unjoined_text=Cloud space: 0% (start now)
+online_storage_component.online_storage_unjoined_tip=Backup this folder to cloud
+online_storage_component.online_storage_warning=cloud space quota exceeded
 
 permissions.folder.no_access=No access
 permissions.folder.read_write=Read/Write
@@ -1243,8 +1243,8 @@ preferences.dialog.show_chat_notifications=Show chat notifications when minimize
 preferences.dialog.show_system_notifications=Show system notifications when minimized
 preferences.dialog.silent_throttle.tooltip=Set the bandwidth usage throttle in pause mode (only works for limits other than 0)
 preferences.dialog.silent_throttle=Pause bandwidth throttle
-preferences.dialog.online_storage.text=Use online storage
-preferences.dialog.online_storage.tip=Setup {APPNAME} to use online storage
+preferences.dialog.online_storage.text=Use cloud space
+preferences.dialog.online_storage.tip=Setup {APPNAME} to use cloud space
 preferences.dialog.start_with_windows=Start {APPNAME} with Windows
 preferences.dialog.statusValidFailed=DynDns {0}\: validation failed\!
 preferences.dialog.statusWaitDynDns=Please wait, DynDns {0} is being validated\!
@@ -1546,14 +1546,14 @@ wizard.finish.os_login_title=Login Successful
 wizard.folder_invitation.intro=Invitation from {0} for folder {1}
 wizard.folder_invitation.title=Folder Invitation
 wizard.folder_online_storage.backup_success_message=Folder {0} was successfully configured for online backup.\n \nPlease keep in mind that the initial backup\nmay take some time on big folders.
-wizard.folder_online_storage.backup_success_title=Online Storage Setup Successful
-wizard.folder_online_storage.remove_success_message=The folder was successfully removed from Online Storage
-wizard.folder_online_storage.remove_success_title=Online Storage Removal Successful
+wizard.folder_online_storage.backup_success_title=Cloud setup successful
+wizard.folder_online_storage.remove_success_message=The folder was successfully removed from cloud space
+wizard.folder_online_storage.remove_success_title=Cloud space removal successful
 wizard.folder_online_storage.warning_message=Do you really want to stop backing up this folder online?
 wizard.folder_online_storage.warning_stop_backing=Stop backing up
-wizard.folder_online_storage.warning_title=Online Storage
-wizard.folder_online_storage.working=Configuring online storage
-wizard.folder_online_storage.working.text=Please wait while configuring online storage
+wizard.folder_online_storage.warning_title=Cloud space
+wizard.folder_online_storage.working=Configuring cloud space
+wizard.folder_online_storage.working.text=Please wait while configuring cloud space
 wizard.folder_setup.title=Configure folder
 wizard.load_invitation.choose_file=Choose the invitation file
 wizard.load_invitation.select=Select invitation file
@@ -1589,7 +1589,7 @@ wizard.multi_online_storage_setup.title=Configure folder(s)
 wizard.pfwizard.folder_title=Folder Wizard
 pro.wizard.pfwizard.activation_title=Activation Wizard
 wizard.pfwizard.invitation_title=Invitation Wizard
-wizard.pfwizard.online_storage_title=Online Storage Wizard
+wizard.pfwizard.online_storage_title=Cloud space Wizard
 wizard.pfwizard.login_title=Login Wizard
 wizard.pfwizard.tell_friend_title=Tell a Friend Wizard
 wizard.pfwizard.restore_title=Restore Wizard
@@ -1612,12 +1612,12 @@ wizard.setup_success=Setup successfully
 wizard.success_join=You have successfully joined the folder\!
 wizard.webservice.enter_account=Please enter your account details below
 wizard.webservice.recover_password=Recover password
-wizard.webservice.learn_more=What is online storage?
+wizard.webservice.learn_more=What is cloud space?
 wizard.webservice.login=Login
 wizard.webservice.mirror_folder=Back up this folder online?
 wizard.webservice.mirror_setup=Backup folder online
 wizard.webservice.password=Password:
-wizard.webservice.unmirror_folder=Remove this folder from Online Storage
+wizard.webservice.unmirror_folder=Remove this folder from cloud
 wizard.webservice.unmirror_setup=Remove folder online
 wizard.webservice.username=Email:
 wizard.what_to_do.backp.select=Please select the files to backup
