--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -972,7 +972,7 @@ status_tab.local=Local
 status_tab.never_synced=Folders never in sync
 status_tab.new_invitations=New invitation(s)
 status_tab.new_single_file_offers=New single file offer(s)
-status_tab.new_notices=Notice(s)
+status_tab.unread_notices=Unread notice(s)
 status_tab.new_friendship_notices=Friendship request(s)
 status_tab.new_warning_notices=Warning(s)
 status_tab.new_invitation_notices=Invitations(s)
