--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -345,7 +345,7 @@ pro.http.description=HTTP connections tunneled via HTTP
 pro.monitor.name=Remote Monitoring
 pro.monitor.description=Activates remote monitoring of this client
 pro.filelist_writer.name=Filelist Writer
-pro.filelist_writer.description=Writes the filelist as CSV file into the folder itself
+pro.filelist_writer.description=Writes the file list as CSV file into the folder itself
 pro.activation.name=Program Activation
 pro.activation.description=Activate the program here
 pro.server_admin.name=Server Admin Console
@@ -433,8 +433,8 @@ pro.wizard.activation.valid_from=Valid from
 pro.wizard.activation.valid_to=Valid to
 pro.wizard.activation.no_key_info=Please activate with an existing account.
 pro.wizard.activation.learn_more=Learn more...
-pro.tabbles.name=Tabbles sharing
-pro.tabbles.description=Connects with Tabbles
+pro.tabbles.name=Tables sharing
+pro.tabbles.description=Connects with Tables
 
 ##############################
 # Config Loader Translations #
@@ -700,7 +700,7 @@ exp_folder_view.never_synchronized=Sync never done
 exp_folder_view.new_files_tip_text={0} new file(s)
 exp_folder_view.unsynchronized=Not in sync
 exp_folder_view.unsynchronized.tip=There are no connected folder members
-exp_folder_view.synchronized=Sync {0}% 
+exp_folder_view.synchronized=Sync {0}%
 exp_folder_view.transfer_mode=Transfer mode: {0}
 exp_folder_view.local={0} local
 exp_folder_view.total={0} total
@@ -748,14 +748,14 @@ files_table_model.size=Size
 files_table_model.modified_by=Modified by
 files_table_model.date=Date
 
-filename_problem.duplicate=Duplicate filename found (with different case) - {0}
+filename_problem.duplicate=Duplicate file name found (with different case) - {0}
 filename_problem.ends_with_illegal_char={0} ends with characters that are not recommended - {0}
 filename_problem.ends_with_illegal_char.soln_desc=Rename the file
-filename_problem.not_recommended_chars=The filename contains characters that are not recommended - {0}
+filename_problem.not_recommended_chars=The file name contains characters that are not recommended - {0}
 filename_problem.not_recommended_chars.soln_desc=Rename the file
-filename_problem.reserved_filename=The filename is a reserved filename on Windows - {0}
+filename_problem.reserved_filename=The filename is a reserved file name on Windows - {0}
 filename_problem.reserved_filename.soln_desc=Rename the file
-filename_problem.too_long=The filename is too long - {0}
+filename_problem.too_long=The file name is too long - {0}
 filename_problem.too_long.soln_desc=Rename the file
 
 files_stats_panel.local_label=Local: {0}
@@ -1179,7 +1179,7 @@ preferences.dialog.dialogs.notifications=Notifications
 preferences.dialog.dialogs.notification.preview.title=Preview
 preferences.dialog.dialogs.notification.preview.text=This is a preview of a notification
 preferences.dialog.dialogs.warn_on_limited_connectivity=Warn on limited connectivity (no incoming connections)
-preferences.dialog.dialogs.warn_on_possible_file_name_problems=Warn on possible filename problems (e.g. too long for Apple classic)
+preferences.dialog.dialogs.warn_on_possible_file_name_problems=Warn on possible file name problems (e.g. too long for Apple classic)
 preferences.dialog.dyn_dns.title=DynDNS
 preferences.dialog.dyn_dns=My (dynamic) DNS
 preferences.dialog.dyn_dnsAutoUpdate=Keep dyndns up-to-date
@@ -1267,7 +1267,7 @@ dialog.directorychooser.use_classic=Classic Browser
 dialog.directorychooser.error=Error. Please use classic browser.
 preferences.dialog.translucent_frame=Make main frame translucent
 preferences.dialog.min_to_sys_tray=Minimize to system tray
-preferences.dialog.ui_locked=Lock on startup
+preferences.dialog.ui_locked=Lock on start up
 preferences.dialog.main_on_top=Main frame stays on top of other windows
 preferences.dialog.auto_expand=Auto expand Folders and Computers
 preferences.dialog.translucent_text=Translucency
@@ -1308,7 +1308,7 @@ select_invitation.text2=Never give out invitation files to untrusted people.
 send_invitation.placetostore=Choose a place to store invitation
 
 send_invitations_advanced.file_label=Save to file
-send_invitations_advanced.filename=Filename
+send_invitations_advanced.filename=File name
 send_invitations_advanced.file_hint=Directory
 send_invitations_advanced.location_tip=Select invitation directory
 send_invitations_advanced.clear_tip=Clear directory
@@ -1425,9 +1425,9 @@ transfer.problem.invalid.part=Received invalid part request
 transfer.problem.io.exception=Unable to read/write\: {0}
 transfer.problem.md5.error=There was an MD5-Hash error
 transfer.problem.old.upload=Already received download request from {0}
-transfer.problem.temp.file.delete=Unable to remove broken tempfile
-transfer.problem.temp.file.open=Unable to create/open tempfile
-transfer.problem.temp.file.write=Unable to write to tempfile
+transfer.problem.temp.file.delete=Unable to remove broken temp file
+transfer.problem.temp.file.open=Unable to create/open temp file
+transfer.problem.temp.file.write=Unable to write to temp file
 transfer.problem.transfer.broken=Transfer broken
 transfer.problem.transfer.exception=There was a TransferException\: {0}
 
@@ -1666,4 +1666,3 @@ wizard.tell_friend.success=Emails have been sent to the recipients.
 
 wizard.multi_online_storage_setup.local_folder_location=Local directory
 wizard.multi_online_storage_setup.select_directory=Select directory
-
