--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -433,8 +433,8 @@ pro.wizard.activation.valid_from=Valid from
 pro.wizard.activation.valid_to=Valid to
 pro.wizard.activation.no_key_info=Please activate with an existing account.
 pro.wizard.activation.learn_more=Learn more...
-pro.tabbles.name=Tables sharing
-pro.tabbles.description=Connects with Tables
+pro.tabbles.name=Tabbles sharing
+pro.tabbles.description=Connects with Tabbles
 
 ##############################
 # Config Loader Translations #
