--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -330,6 +330,8 @@ transfer_mode.meta_sync.name=Auto sync (meta)
 # Pro Translations #
 ####################
 
+pro.atomic_commit.name=Atomic updates
+pro.atomic_commit.description=Keeps target directories in a consistent update state
 pro.download_csv.description=Downloads the list of accounts as a CSV file
 pro.download_csv.key=D
 pro.download_csv.name=Download as CSV
