Show finding files text when doing directory filter, fixes #2085

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -789,6 +789,7 @@ filter_text_field.menu.modifier.text=Filter by modifier
 filter_text_field.menu.computer.text=Filter for {0}
 filter_text_field.tip=Filter results
 files_table_panel.no_files_available=No files available
+files_table_panel.finding_files=Finding files...
 
 find_computers_dialog.title=Find computers
 find_computers_panel.search_for_computer.hint=Search for a computer
